improving docker runs

--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,10 @@ development:
 test: &test
   <<: *default
   database: colab_test_<%= ENV['TEST_ENV_NUMBER'] %>
+
+docker: &test
+  <<: *default
+  database: colab_test_<%= ENV['TEST_ENV_NUMBER'] %>
   host: db
 
 # As with config/secrets.yml, you never want to store sensitive information,
