--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "shakapacker": "6.2.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
-    "timeshift": "^0.0.2",
     "typescript": "^4.6.3",
     "url": "^0.11.0",
     "webpack": "^5.72.0",
@@ -93,6 +92,7 @@
   ],
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "mockdate": "^3.0.5",
     "react-refresh": "^0.13.0",
     "webpack-dev-server": "^4.8.1"
   }
