--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -55,6 +55,13 @@ test:
   # Compile test packs to a separate directory
   public_output_path: packs-test
 
+docker:
+  <<: *default
+  compile: true
+
+  # Compile test packs to a separate directory
+  public_output_path: packs-docker
+
 production:
   <<: *default
 
