--- a/containers/x86/app/Dockerfile
+++ b/containers/x86/app/Dockerfile
@@ -26,9 +26,6 @@ RUN chown -R colab:colab .ssh
 
 USER colab
 
-RUN mkdir -p /home/colab/src/app
-WORKDIR /home/colab/src/app
-
 SHELL ["/bin/bash", "-l", "-c"]
 
 RUN echo -e "export S3_BUCKET_NAME=colab-dev" >> ~/.bashrc &&\
@@ -43,7 +40,7 @@ RUN echo -e "export S3_BUCKET_NAME=colab-dev" >> ~/.bashrc &&\
 RUN git clone --depth 1 https://github.com/asdf-vm/asdf.git ~/.asdf --branch v0.9.0 &&\
     echo -e '\n. $HOME/.asdf/asdf.sh' >> ~/.bashrc && \
     echo -e '\n. $HOME/.asdf/asdf.sh' >> ~/.profile && \
-     echo 'bundler' >> ~/.default-gems
+    echo 'bundler' >> ~/.default-gems
 
 RUN source ~/.bashrc && \
   asdf plugin add ruby && \
@@ -60,8 +57,13 @@ RUN mkdir /home/colab/.asdf/shims && \
 
 USER colab
 
+#Set up the app materials
+RUN mkdir -p /home/colab/src/app
+COPY containers/entrypoint.sh /home/colab/src/
+WORKDIR /home/colab/src/app
+
 ENV DRIVER docker
 ENV CUCUMBER_PUBLISH_TOKEN caa67d94-0eab-4593-90c7-6032772d86ec
 
-ENTRYPOINT  ["/home/colab/src/app/run_cukes.sh"]
+ENTRYPOINT  ["/home/colab/src/entrypoint.sh"]
 CMD -r
