--- a/containers/arm/app/Dockerfile
+++ b/containers/arm/app/Dockerfile
@@ -66,7 +66,7 @@ WORKDIR /home/colab/src/app
 
 ENV DRIVER docker
 ENV CUCUMBER_PUBLISH_TOKEN caa67d94-0eab-4593-90c7-6032772d86ec
-ENV RAILS_MASTER_KEY 4e2027b76f8638d77d05a617c748d877
+# ENV RAILS_MASTER_KEY 4e2027b76f8638d77d05a617c748d877
 
 ENTRYPOINT  ["/home/colab/src/entrypoint.sh"]
 CMD -r
