--- a/containers/x86/db/Dockerfile
+++ b/containers/x86/db/Dockerfile
@@ -1,6 +1,6 @@
 FROM mariadb
 
-COPY initDBs.sql /docker-entrypoint-initdb.d/init-privs.sql
+COPY containers/initDBs.sql /docker-entrypoint-initdb.d/init-privs.sql
 
 ENV MYSQL_ROOT_PASSWORD test
 
