--- a/config/storage.yml
+++ b/config/storage.yml
@@ -16,6 +16,15 @@ test:
 #   region: <%= ENV.fetch('AWS_REGION') %>
 #   bucket: <%= ENV.fetch('S3_BUCKET_NAME') %>
 
+docker:
+  service: Disk
+  root: <%= Rails.root.join("tmp/storage/docker") %>
+#   service: S3
+#   access_key_id: <%= ENV.fetch('AWS_ACCESS_KEY_ID') %>
+#   secret_access_key: <%= ENV.fetch('AWS_SECRET_ACCESS_KEY') %>
+#   region: <%= ENV.fetch('AWS_REGION') %>
+#   bucket: <%= ENV.fetch('S3_BUCKET_NAME') %>
+
 prod:
   service: S3
   access_key_id: <%= ENV.fetch('AWS_ACCESS_KEY_ID') %>
