--- a/config/storage.yml
+++ b/config/storage.yml
@@ -27,10 +27,10 @@ docker:
 
 prod:
   service: S3
-  access_key_id: <%= ENV.fetch('AWS_ACCESS_KEY_ID') %>
-  secret_access_key: <%= ENV.fetch('AWS_SECRET_ACCESS_KEY') %>
-  region: <%= ENV.fetch('AWS_REGION') %>
-  bucket: <%= ENV.fetch('S3_BUCKET_NAME') %>
+  access_key_id: <%= Rails.application.credentials.aws.aws_access_key_id %>
+  secret_access_key: <%= Rails.application.credentials.aws.secret_access_key %>
+  region: <%= Rails.application.credentials.aws.aws_region %>
+  bucket: <%= Rails.application.credentials.aws.s3_bucket %>
 
 # test:
 #   service: Disk
