--- a/config/storage.yml
+++ b/config/storage.yml
@@ -27,9 +27,9 @@ docker:
 
 prod:
   service: S3
-  access_key_id: <%= Rails.application.credentials.aws.aws_access_key_id %>
+  access_key_id: <%= Rails.application.credentials.aws.access_key_id %>
   secret_access_key: <%= Rails.application.credentials.aws.secret_access_key %>
-  region: <%= Rails.application.credentials.aws.aws_region %>
+  region: <%= Rails.application.credentials.aws.region %>
   bucket: <%= Rails.application.credentials.aws.s3_bucket %>
 
 # test:
