--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.6.0",
     "@mui/styles": "^5.6.0",
+    "@mui/x-date-pickers": "^5.0.0-beta.0",
     "@react-spring/parallax": "^9.4.4",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -89,7 +90,6 @@
     "defaults"
   ],
   "devDependencies": {
-    "@mui/x-date-pickers": "^5.0.0-alpha.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "mockdate": "^3.0.5",
     "react-refresh": "^0.14.0",
