--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,6 +7,13 @@ test:
   root: <%= Rails.root.join("tmp/storage/test") %>
 
 
+stage:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.aws.access_key_id %>
+  secret_access_key: <%= Rails.application.credentials.aws.secret_access_key %>
+  region: <%= Rails.application.credentials.aws.region %>
+  bucket: <%= Rails.application.credentials.aws.s3_bucket %>
+
 prod:
   service: S3
   access_key_id: <%= Rails.application.credentials.aws.access_key_id %>
