--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -55,7 +55,7 @@ test:
   # Compile test packs to a separate directory
   public_output_path: packs-test
 
-production:
+production: &production
   <<: *default
 
   # Production depends on precompilation of packs prior to booting for performance.
@@ -63,3 +63,7 @@ production:
 
   # Cache manifest.json for performance
   cache_manifest: true
+
+staging:
+  <<: *production
+
