--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,11 +12,11 @@ stage:
   access_key_id: <%= Rails.application.credentials.aws.access_key_id %>
   secret_access_key: <%= Rails.application.credentials.aws.secret_access_key %>
   region: <%= Rails.application.credentials.aws.region %>
-  bucket: <%= Rails.application.credentials.aws.s3_bucket %>
+  bucket: <%= Rails.application.credentials.aws.s3_bucket_name %>
 
 prod:
   service: S3
   access_key_id: <%= Rails.application.credentials.aws.access_key_id %>
   secret_access_key: <%= Rails.application.credentials.aws.secret_access_key %>
   region: <%= Rails.application.credentials.aws.region %>
-  bucket: <%= Rails.application.credentials.aws.s3_bucket %>
+  bucket: <%= Rails.application.credentials.aws.s3_bucket_name %>
