--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -16,6 +16,10 @@ default: &default
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
 
+  extensions:
+    - .jsx
+    - .js
+
 development:
   <<: *default
   compile: true
