--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "autosuggest-highlight": "^3.2.1",
     "axios": "^0.27.0",
     "babel-loader": "^8.2.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
