--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -59,8 +59,8 @@ production: &production
   <<: *default
 
   # Production depends on precompilation of packs prior to booting for performance.
-  compile: true
-  compiler_strategy: mtime
+  compile: false
+  # compiler_strategy: mtime
 
   # Cache manifest.json for performance
   cache_manifest: true
