--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/styles": "^5.6.0",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
     "@react-spring/parallax": "^9.4.4",
+    "@reduxjs/toolkit": "^1.8.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.23",
