--- a/db/quotes.yml
+++ b/db/quotes.yml
@@ -148,7 +148,7 @@
 - !ruby/object:Quote_
   text_en: >
     If you try and we lose, then it isn't your fault. But if you don't
-    try and we lose, then it's all your fault."
+    try and we lose, then it's all your fault.
   attribution: Orson Scott Card
 
 - !ruby/object:Quote_
