--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/core": "7",
+    "@babel/plugin-transform-runtime": "7",
+    "@babel/preset-env": "7",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@babel/runtime": "^7.17.9",
+    "@babel/runtime": "7",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fullcalendar/daygrid": "^5.10.1",
@@ -30,9 +30,9 @@
     "@visx/xychart": "^2.9.0",
     "autosuggest-highlight": "^3.2.1",
     "axios": "^1.0.0",
-    "babel-loader": "^9.0.0",
+    "babel-loader": "8",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "compression-webpack-plugin": "^10.0.0",
+    "compression-webpack-plugin": "9",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "d3-color": "^3.1.0",
@@ -68,15 +68,15 @@
     "react-virtualized": "^9.22.3",
     "react_ujs": "^2.6.2",
     "resize-observer-hook": "^1.0.5",
-    "shakapacker": "6.5.2",
+    "shakapacker": "6.5.3",
     "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.1",
+    "terser-webpack-plugin": "5",
     "typescript": "^4.6.3",
     "url": "^0.11.0",
-    "webpack": "^5.72.0",
-    "webpack-assets-manifest": "^5.1.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-merge": "^5.8.0",
+    "webpack": "5",
+    "webpack-assets-manifest": "5",
+    "webpack-cli": "4",
+    "webpack-merge": "5",
     "webpack-sources": "^3.2.3",
     "whatwg-fetch": "^3.6.2"
   },
@@ -90,6 +90,6 @@
     "defaults"
   ],
   "devDependencies": {
-    "webpack-dev-server": "^4.8.1"
+    "webpack-dev-server": "^4.11.1"
   }
 }
