--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@babel/core": "7",
     "@babel/plugin-transform-runtime": "7",
     "@babel/preset-env": "7",
-    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "7",
     "@emotion/react": "^11.9.0",
@@ -31,10 +31,11 @@
     "autosuggest-highlight": "^3.2.1",
     "axios": "^1.0.0",
     "babel-loader": "8",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "9",
     "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "d3-color": "^3.1.0",
     "d3-scale-chromatic": "^3.0.0",
     "draft-js": "^0.11.7",
@@ -48,27 +49,28 @@
     "i18next-localstorage-cache": "^1.1.1",
     "linked-sliders": "^0.2.0",
     "luxon": "^3.0.1",
-    "mini-css-extract-plugin": "^2.6.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "mockdate": "^3.0.5",
     "mui-datatables": "^4.2.2",
     "promise-polyfill": "^8.2.3",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-cookie-consent": "^8.0.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.14.7",
     "react-draggable": "^4.4.4",
     "react-google-login": "^5.2.2",
     "react-i18next": "^12.0.0",
     "react-joyride": "^2.4.0",
+    "react-on-rails": "13.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "6",
     "react-spring": "^9.4.4",
     "react-virtualized": "^9.22.3",
     "react_ujs": "^2.6.2",
     "resize-observer-hook": "^1.0.5",
-    "shakapacker": "6.5.3",
+    "shakapacker": "6.5.2",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "5",
     "typescript": "^4.6.3",
@@ -90,6 +92,8 @@
     "defaults"
   ],
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
+    "react-refresh": "^0.14.0",
     "webpack-dev-server": "^4.11.1"
   }
 }
