--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "@visx/xychart": "^2.9.0",
     "autosuggest-highlight": "^3.2.1",
     "axios": "^1.0.0",
-    "babel-loader": "8",
+    "babel-loader": "^9.1.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "compression-webpack-plugin": "9",
+    "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "d3-color": "^3.1.0",
