reorganizing and cleaning

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -58,6 +58,7 @@ production:
 
   # Production depends on precompilation of packs prior to booting for performance.
   compile: false
+  extract_css: true
 
   # Cache manifest.json for performance
   cache_manifest: true
