--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       - /var/lib/mysql
   browser:
     image: colab_browser
+    # The following inspired by:
+    # https://medium.com/the-curve-tech-blog/dealing-with-cryptic-selenium-webdriver-error-invalidsessioniderror-errors-9c15abc68fdf
+    shm_size: '256mb'
     ports:
       - 4444:4444
       - 5900:5900
