--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.6.0",
     "@mui/styles": "^5.6.0",
+    "@mui/system": "^5.10.17",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
     "@react-spring/parallax": "^9.4.4",
     "@reduxjs/toolkit": "^1.8.5",
@@ -35,7 +36,6 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.2.2",
     "d3-color": "^3.1.0",
     "d3-scale-chromatic": "^3.0.0",
     "draft-js": "^0.11.7",
@@ -47,6 +47,7 @@
     "i18next-fetch-backend": "^5.0.0",
     "i18next-intervalplural-postprocessor": "^3.0.0",
     "i18next-localstorage-cache": "^1.1.1",
+    "immutable": "^4.1.0",
     "linked-sliders": "^0.2.0",
     "luxon": "^3.0.1",
     "mini-css-extract-plugin": "^2.6.1",
