dev server is nearly functional

--- a/containers/arm/dev_server/Dockerfile
+++ b/containers/arm/dev_server/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu
+FROM arm64v8/ubuntu
 
 RUN apt update && apt upgrade -y
 RUN apt -y install \
@@ -22,12 +22,14 @@ RUN apt autoremove && \
 RUN groupadd -r colab && \
   useradd --no-log-init -rm -d /home/colab -s /bin/bash -g colab colab
 
+
 WORKDIR /home/colab
 RUN mkdir .ssh
 COPY containers/id_rsa .ssh/
 RUN chown -R colab:colab .ssh
 
 USER colab
+
 
 SHELL ["/bin/bash", "-l", "-c"]
 
@@ -43,7 +45,7 @@ RUN echo -e "export S3_BUCKET_NAME=colab-dev" >> ~/.bashrc &&\
 RUN git clone --depth 1 https://github.com/asdf-vm/asdf.git ~/.asdf --branch v0.9.0 &&\
     echo -e '\n. $HOME/.asdf/asdf.sh' >> ~/.bashrc && \
     echo -e '\n. $HOME/.asdf/asdf.sh' >> ~/.profile && \
-    echo 'bundler' >> ~/.default-gems
+    echo -e 'bundler \n foreman' >> ~/.default-gems
 
 RUN source ~/.bashrc && \
   asdf plugin add ruby && \
@@ -62,10 +64,12 @@ USER colab
 
 #Set up the app materials
 RUN mkdir -p /home/colab/src/app
-COPY containers/entrypoint.sh /home/colab/src/
+COPY containers/dev_entrypoint.sh /home/colab/src/entrypoint.sh
 WORKDIR /home/colab/src/app
 
 ENV DRIVER docker
+ENV COLAB_DB=db
+ENV COLAB_DB_PORT=3306
 ENV CUCUMBER_PUBLISH_TOKEN caa67d94-0eab-4593-90c7-6032772d86ec
 # ENV RAILS_MASTER_KEY 4e2027b76f8638d77d05a617c748d877
 
