--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,8 @@ default: &default
 development:
   <<: *default
   database: colab_dev
+  host: <%= ENV['COLAB_DB'].present? ? ENV['COLAB_DB'] : '127.0.0.1' %>
+  port: <%= ENV['COLAB_DB_PORT'].present? ? ENV['COLAB_DB_PORT'] : '3306' %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
