fixing relative file locations

--- a/containers/arm/db/Dockerfile
+++ b/containers/arm/db/Dockerfile
@@ -1,6 +1,6 @@
 FROM arm64v8/mariadb
 
-COPY ../../containers/initDBs.sql /docker-entrypoint-initdb.d/init-privs.sql
+COPY containers/initDBs.sql /docker-entrypoint-initdb.d/init-privs.sql
 
 ENV MYSQL_ROOT_PASSWORD test
 # ENV MYSQL_TCP_PORT 3137
