--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -25,6 +25,7 @@ development:
     https: false
     host: localhost
     port: 3035
+    public: localhost:3035
     # Hot Module Replacement updates modules while the application is running without a full reload
     hmr: true
     client:
