--- a/containers/dev_env/docker-compose.yml
+++ b/containers/dev_env/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     image: colab_dev_server
     ports:
       - "3000:3000"
+      - "3035:3035"
+    depends_on:
+      - db
     volumes:
       - ../../:/home/colab/src/app
       - asdf-installs:/home/colab/.asdf/installs
