--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@babel/runtime": "7",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@fullcalendar/daygrid": "^5.10.1",
-    "@fullcalendar/list": "^5.10.1",
-    "@fullcalendar/luxon": "^5.10.1",
-    "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/core": "^6.0.3",
+    "@fullcalendar/daygrid": "^6.0.3",
+    "@fullcalendar/list": "^6.0.3",
+    "@fullcalendar/luxon": "^6.0.3",
+    "@fullcalendar/react": "^6.0.4",
     "@mui/icons-material": "^5.6.0",
     "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.6.0",
