--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.6.0",
     "@mui/styles": "^5.6.0",
     "@mui/system": "^5.10.17",
+    "@mui/x-data-grid": "^5.17.23",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
     "@react-oauth/google": "^0.7.0",
     "@react-spring/parallax": "^9.4.4",
