updates to our builds

--- a/containers/x86/dev_server/Dockerfile
+++ b/containers/x86/dev_server/Dockerfile
@@ -1,5 +1,8 @@
 FROM ubuntu
 
+ARG UID=1000
+ARG GID=1000
+
 RUN apt update && apt upgrade -y
 RUN apt -y install \
   curl \
@@ -20,7 +23,7 @@ RUN apt autoremove && \
     apt clean
 
 RUN groupadd -r colab && \
-  useradd --no-log-init -rm -d /home/colab -s /bin/bash -g colab colab
+  useradd -u $UID -g $GID --no-log-init -rm -d /home/colab -s /bin/bash -g colab colab
 
 WORKDIR /home/colab
 
