fixing some testing and reporting stuff

--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@mui/x-date-pickers": "^5.0.0-beta.0",
     "@react-oauth/google": "^0.8.0",
     "@react-spring/parallax": "^9.4.4",
+    "@react-spring/types": "^9.7.0",
+    "@react-spring/web": "^9.7.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.23",
+    "@visx/axis": "^3.0.1",
     "@visx/curve": "^3.0.0",
     "@visx/scale": "^3.0.0",
     "@visx/shape": "^3.0.0",
