--- a/containers/test_env/docker-compose.yml
+++ b/containers/test_env/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.7"
 services:
   app:
     image: colab_tester
+    hostname: "test-server-${HOST}"
     volumes:
       - src:/home/colab/src/app
       - asdf-installs:/home/colab/.asdf/installs
