--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "email-validator": "^2.0.4",
+    "html-react-parser": "^3.0.16",
     "html-to-draftjs": "^1.5.0",
     "i18next": "^22.0.2",
     "i18next-browser-languagedetector": "^7.0.0",
