--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-draggable": "^4.4.4",
     "react-i18next": "^12.0.0",
     "react-joyride": "^2.4.0",
-    "react-on-rails": "13.3.3",
+    "react-on-rails": "^13.3.4",
     "react-redux": "^8.0.1",
     "react-router-dom": "6",
     "react-spring": "^9.4.4",
