--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "react-virtualized": "^9.22.3",
     "react_ujs": "^2.6.2",
     "resize-observer-hook": "^1.0.5",
-    "shakapacker": "6.6.0",
+    "shakapacker": "^7.0.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "5",
     "typescript": "^5.0.2",
