--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "luxon": "^3.0.1",
     "mini-css-extract-plugin": "^2.6.1",
     "mockdate": "^3.0.5",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.6.2",
     "promise-polyfill": "^8.2.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
