--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "i18next-fetch-backend": "^5.0.0",
     "i18next-intervalplural-postprocessor": "^3.0.0",
     "i18next-localstorage-cache": "^1.1.1",
-    "immutable": "^4.1.0",
+    "immutable": "^5.0.0-beta.2",
     "linked-sliders": "^0.2.0",
     "luxon": "^3.0.1",
     "mini-css-extract-plugin": "^2.6.1",
