--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "primereact": "^9.6.2",
     "promise-polyfill": "^8.2.3",
     "prop-types": "^15.8.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-cookie-consent": "^8.0.1",
