--- a/package.json
+++ b/package.json
@@ -62,10 +62,10 @@
     "prop-types": "^15.8.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
-    "react-autosuggest": "^10.1.0",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.4",
+    "react-grid-system": "^8.1.9",
     "react-i18next": "^13.0.0",
     "react-joyride": "^2.4.0",
     "react-on-rails": "^13.3.4",
