--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ require:
   - rubocop-thread_safety
   - rubocop-performance
   - rubocop-rails
+  - rubocop-capybara
 
 AllCops:
   Include:
@@ -14,5 +15,13 @@ AllCops:
     - 'config/**/*'
     - 'script/**/*'
 
+Metrics:
+    Enabled: false
+Metrics/ClassLength:
+    Enabled: false
+Metrics/BlockLength:
+    Enabled: false
+Metrics/MethodLength:
+    Enabled: false
 Style/YodaCondition:
   EnforcedStyle: require_for_equality_operators_only
