removing deprecations and fixing a test

--- a/containers/dev_env/docker-compose.yml
+++ b/containers/dev_env/docker-compose.yml
@@ -28,3 +28,10 @@ volumes:
   mariadb-data:
   devdata:
 
+networks:
+  frontend-network:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.16.238.0/24
