--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-spring/types": "^9.7.0",
     "@react-spring/web": "^9.7.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@swc/core": "^1.3.102",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.23",
@@ -75,6 +76,7 @@
     "resize-observer-hook": "^1.0.5",
     "shakapacker": "^7.0.1",
     "style-loader": "^3.3.1",
+    "swc-loader": "^0.2.3",
     "terser-webpack-plugin": "5",
     "typescript": "^5.0.2",
     "url": "^0.11.0",
@@ -88,7 +90,7 @@
   "version": "0.1.0",
   "babel": {
     "presets": [
-        "./node_modules/shakapacker/package/babel/preset.js"
+      "./node_modules/shakapacker/package/babel/preset.js"
     ]
   },
   "browserslist": [
