--- a/config/shakapacker.yml
+++ b/config/shakapacker.yml
@@ -14,6 +14,7 @@ default: &default
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
+  ensure_consistent_versioning: true
 
   webpack_loader: 'swc'
 
