rubocop spacing style

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,3 +25,5 @@ Metrics/MethodLength:
     Enabled: false
 Style/YodaCondition:
   EnforcedStyle: require_for_equality_operators_only
+Layout/SpaceAroundBlockParameters:
+  EnforcedStyleInsidePipes: space
