--- a/config/shakapacker.yml
+++ b/config/shakapacker.yml
@@ -16,12 +16,12 @@ default: &default
   cache_manifest: false
   ensure_consistent_versioning: true
 
-  webpack_loader: 'swc'
 
 development:
   <<: *default
   # This is false since we're running `bin/shakapacker -w` in Procfile.dev-setic
   compile: false
+  webpack_loader: 'swc'
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
@@ -31,6 +31,7 @@ development:
     public: localhost:3035
     # Hot Module Replacement updates modules while the application is running without a full reload
     hmr: true
+    hot: true
     client:
       # Should we show a full-screen overlay in the browser when there are compiler errors or warnings?
       overlay: true
@@ -53,6 +54,14 @@ test:
   <<: *default
   compile: true
   extract_css: true
+  dev_server:
+    host: 0.0.0.0
+    port: 3010
+    allowed_hosts: 'localhost'
+    watchOptions:
+      poll: 1000
+    hmr: false
+
 
   # Compile test packs to a separate directory
   public_output_path: packs-test
