style and fix safety

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,3 +27,5 @@ Style/YodaCondition:
   EnforcedStyle: require_for_equality_operators_only
 Layout/SpaceAroundBlockParameters:
   EnforcedStyleInsidePipes: space
+Layout/SpaceInsideParens:
+  EnforcedStyle: space
