--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app",
   "private": true,
+  "packageManager": "yarn@1.22.19",
   "dependencies": {
     "@babel/core": "7",
     "@babel/plugin-transform-runtime": "7",
