--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "webpack": "5",
     "webpack-assets-manifest": "5",
     "webpack-cli": "^5.0.0",
-    "webpack-merge": "5",
+    "webpack-merge": "^6.0.1",
     "webpack-sources": "^3.2.3",
     "whatwg-fetch": "^3.6.2"
   },
