--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-spring/types": "^9.7.0",
     "@react-spring/web": "^9.7.0",
     "@reduxjs/toolkit": "^2.0.1",
-    "@swc/core": "^1.3.105",
+    "@swc/core": "^1.7.0-nightly-20240714.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.23",
