--- a/containers/x86/tester_server/Dockerfile
+++ b/containers/x86/tester_server/Dockerfile
@@ -15,7 +15,6 @@ RUN apt-get -y --fix-missing -q install \
   libyaml-dev \
   libmysqlclient-dev \
   python3 \
-  yarn \
   libvips 
 
 
@@ -53,7 +52,7 @@ RUN source ~/.bashrc && \
   asdf plugin add ruby && \
   asdf plugin add bundler && \
   asdf plugin add nodejs && \
-  asdf plugin add yarn
+  asdf plugin add pnpm
 
 USER root
 
@@ -69,8 +68,8 @@ RUN mkdir -p /home/colab/src/app
 COPY containers/test_entrypoint.sh /home/colab/src/entrypoint.sh
 WORKDIR /home/colab/src/app
 
-ENV DRIVER docker
-ENV CUCUMBER_PUBLISH_TOKEN caa67d94-0eab-4593-90c7-6032772d86ec
+ENV DRIVER=docker
+ENV CUCUMBER_PUBLISH_TOKEN=caa67d94-0eab-4593-90c7-6032772d86ec
 
 ENTRYPOINT  ["/home/colab/src/entrypoint.sh"]
 CMD -r
