--- a/containers/arm/tester_server/Dockerfile
+++ b/containers/arm/tester_server/Dockerfile
@@ -10,8 +10,7 @@ RUN apt -y install \
   vim \
   git \
   bash \
-  libmysqlclient-dev \
-  yarn 
+  libmysqlclient-dev
 
 RUN apt -y install \
   libyaml-dev
@@ -52,7 +51,7 @@ RUN source ~/.bashrc && \
   asdf plugin add ruby && \
   asdf plugin add bundler && \
   asdf plugin add nodejs && \
-  asdf plugin add yarn
+  asdf plugin add pnpm
 
 USER root
 
@@ -68,8 +67,8 @@ RUN mkdir -p /home/colab/src/app
 COPY containers/test_entrypoint.sh /home/colab/src/entrypoint.sh
 WORKDIR /home/colab/src/app
 
-ENV DRIVER docker
-ENV CUCUMBER_PUBLISH_TOKEN caa67d94-0eab-4593-90c7-6032772d86ec
+ENV DRIVER=docker
+ENV CUCUMBER_PUBLISH_TOKEN=caa67d94-0eab-4593-90c7-6032772d86ec
 
 ENTRYPOINT  ["/home/colab/src/entrypoint.sh"]
 CMD -r
