--- a/containers/x86/dev_server/Dockerfile
+++ b/containers/x86/dev_server/Dockerfile
@@ -13,8 +13,7 @@ RUN apt -y install \
   vim \
   git \
   bash \
-  libmysqlclient-dev \
-  yarn
+  libmysqlclient-dev
 
 RUN apt -y install \
   libyaml-dev
@@ -49,7 +48,7 @@ RUN source ~/.bashrc && \
   asdf plugin add ruby && \
   asdf plugin add bundler && \
   asdf plugin add nodejs && \
-  asdf plugin add yarn
+  asdf plugin add pnpm
 
 USER root
 
@@ -65,8 +64,8 @@ RUN mkdir -p /home/colab/src/app
 COPY containers/dev_entrypoint.sh /home/colab/src/entrypoint.sh
 WORKDIR /home/colab/src/app
 
-ENV DRIVER docker
-ENV CUCUMBER_PUBLISH_TOKEN caa67d94-0eab-4593-90c7-6032772d86ec
+ENV DRIVER=docker
+ENV CUCUMBER_PUBLISH_TOKEN=caa67d94-0eab-4593-90c7-6032772d86ec
 ENV COLAB_DB=db
 ENV COLAB_DB_PORT=3306
 
