--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "app",
   "private": true,
-  "packageManager": "yarn@1.22.19",
+  "packageManager": "pnpm@9.7.1",
+  "scripts": {
+    "preinstall": "npx only-allow pnpm"
+  },
   "dependencies": {
     "@babel/core": "7",
     "@babel/plugin-transform-runtime": "7",
