cleaning up dockerfiles and versions

--- a/containers/arm/tester_server/Dockerfile
+++ b/containers/arm/tester_server/Dockerfile
@@ -68,8 +68,8 @@ RUN mkdir -p /home/colab/src/app
 COPY containers/test_entrypoint.sh /home/colab/src/entrypoint.sh
 WORKDIR /home/colab/src/app
 
-ENV DRIVER docker
-ENV CUCUMBER_PUBLISH_TOKEN caa67d94-0eab-4593-90c7-6032772d86ec
+ENV DRIVER=docker
+ENV CUCUMBER_PUBLISH_TOKEN=caa67d94-0eab-4593-90c7-6032772d86ec
 
 ENTRYPOINT  ["/home/colab/src/entrypoint.sh"]
 CMD -r
