--- a/containers/arm/dev_server/Dockerfile
+++ b/containers/arm/dev_server/Dockerfile
@@ -64,10 +64,10 @@ RUN mkdir -p /home/colab/src/app
 COPY containers/dev_entrypoint.sh /home/colab/src/entrypoint.sh
 WORKDIR /home/colab/src/app
 
-ENV DRIVER docker
+ENV DRIVER=docker
 ENV COLAB_DB=db
 ENV COLAB_DB_PORT=3306
-ENV CUCUMBER_PUBLISH_TOKEN caa67d94-0eab-4593-90c7-6032772d86ec
+ENV CUCUMBER_PUBLISH_TOKEN=caa67d94-0eab-4593-90c7-6032772d86ec
 
 ENTRYPOINT  ["/home/colab/src/entrypoint.sh"]
 CMD -r
