--- a/containers/x86/dev_server/Dockerfile
+++ b/containers/x86/dev_server/Dockerfile
@@ -65,8 +65,8 @@ RUN mkdir -p /home/colab/src/app
 COPY containers/dev_entrypoint.sh /home/colab/src/entrypoint.sh
 WORKDIR /home/colab/src/app
 
-ENV DRIVER docker
-ENV CUCUMBER_PUBLISH_TOKEN caa67d94-0eab-4593-90c7-6032772d86ec
+ENV DRIVER=docker
+ENV CUCUMBER_PUBLISH_TOKEN=caa67d94-0eab-4593-90c7-6032772d86ec
 ENV COLAB_DB=db
 ENV COLAB_DB_PORT=3306
 
