--- a/containers/arm/tester_server/Dockerfile
+++ b/containers/arm/tester_server/Dockerfile
@@ -8,6 +8,8 @@ RUN apt -y install \
   make \
   ruby-build \
   vim \
+  autoconf \
+  gettext \
   git \
   bash \
   libmysqlclient-dev \
@@ -52,6 +54,7 @@ RUN source ~/.bashrc && \
   asdf plugin add ruby && \
   asdf plugin add bundler && \
   asdf plugin add nodejs && \
+  asdf plugin add git && \
   asdf plugin add yarn
 
 USER root
