--- a/containers/x86/dev_server/Dockerfile
+++ b/containers/x86/dev_server/Dockerfile
@@ -12,6 +12,8 @@ RUN apt -y install \
   ruby-build \
   vim \
   git \
+  autoconf \
+  gettext \
   bash \
   libmysqlclient-dev \
   yarn
@@ -49,6 +51,7 @@ RUN source ~/.bashrc && \
   asdf plugin add ruby && \
   asdf plugin add bundler && \
   asdf plugin add nodejs && \
+  asdf plugin add git && \
   asdf plugin add yarn
 
 USER root
