--- a/containers/test_env/docker-compose.yml
+++ b/containers/test_env/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     image: colab_db
     tmpfs:
       - /var/lib/mysql
-  browser:
+  selenium:
     image: colab_browser
     # The following inspired by:
     # https://medium.com/the-curve-tech-blog/dealing-with-cryptic-selenium-webdriver-error-invalidsessioniderror-errors-9c15abc68fdf
