clean up update && install

--- a/containers/agnostic/tester_server/Dockerfile
+++ b/containers/agnostic/tester_server/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu
 
-RUN apt update && apt upgrade -y
-RUN apt -y install \
+RUN apt update && apt upgrade -y && \
+  apt -y install \
   curl \
   imagemagick \
   libvips \
