trying to get the DB right

--- a/containers/test_env/docker-compose.yml
+++ b/containers/test_env/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     image: colab_db
     tmpfs:
       - /var/lib/mysql
+    ports:
+      - 31337:3306
   selenium:
     image: colab_browser
     # The following inspired by:
