--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react-joyride": "^2.4.0",
     "react-on-rails": "^14.0.4",
     "react-redux": "^9.0.1",
-    "react-router-dom": "6",
+    "react-router": "^7.1.4",
     "react-spring": "^9.4.4",
     "react-virtualized": "^9.22.3",
     "react_ujs": "^3.0.0",
