--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "react-dom": "^19.0.0",
     "react-grid-system": "^8.1.9",
     "react-i18next": "^15.0.1",
-    "react-joyride": "^2.4.0",
+    "react-joyride": "^3.0.0-7",
     "react-on-rails": "^14.0.4",
     "react-redux": "^9.0.1",
     "react-router": "^7.1.4",
