cleaned up installment submissions and success messages

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,10 @@
 require: 
   - rubocop-thread_safety
+  - rubocop-capybara
+
+plugins:
   - rubocop-performance
   - rubocop-rails
-  - rubocop-capybara
 
 AllCops:
   Include:
