calling out duplicates in the UI

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/react-redux": "^7.1.23",
+    "@types/stopword": "^2.0.3",
     "@visx/axis": "^3.0.1",
     "@visx/curve": "^3.0.0",
     "@visx/scale": "^3.0.0",
@@ -68,6 +69,7 @@
     "react_ujs": "^3.0.0",
     "resize-observer-hook": "^1.0.5",
     "shakapacker": "^8.0.2",
+    "stopword": "^3.1.4",
     "style-loader": "^4.0.0",
     "swc-loader": "^0.2.3",
     "terser-webpack-plugin": "5",
