--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-loader": "^10.0.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "chroma-js": "^3.1.2",
     "compression-webpack-plugin": "^11.0.0",
     "css-loader": "^7.1.2",
     "d3-color": "^3.1.0",
