--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react-grid-system": "^8.1.9",
     "react-i18next": "^15.0.1",
     "react-joyride": "^3.0.0-7",
-    "react-on-rails": "^14.1.1",
+    "react-on-rails": "14.2.0",
     "react-redux": "^9.0.1",
     "react-router": "^7.1.4",
     "react-spring": "^9.4.4",
