--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "typescript": "^5.0.2",
     "url": "^0.11.0",
     "webpack": "5",
-    "webpack-assets-manifest": "5",
+    "webpack-assets-manifest": "^6.0.0",
     "webpack-cli": "^6.0.1",
     "webpack-merge": "^6.0.1",
     "webpack-sources": "^3.2.3",
@@ -94,7 +94,7 @@
   ],
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "react-refresh": "^0.16.0",
+    "react-refresh": "^0.17.0",
     "webpack-dev-server": "^5.0.1"
   }
 }
