--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@babel/core": "7",
     "@babel/plugin-transform-runtime": "7",
     "@babel/preset-env": "7",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "7",
     "@fullcalendar/core": "^6.0.3",
@@ -38,6 +38,7 @@
     "chroma-js": "^3.1.2",
     "compression-webpack-plugin": "^11.0.0",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "d3-color": "^3.1.0",
     "d3-scale-chromatic": "^3.0.0",
     "email-validator": "^2.0.4",
@@ -49,16 +50,16 @@
     "i18next-localstorage-cache": "^1.1.1",
     "immutable": "^5.0.0-beta.2",
     "luxon": "^3.0.1",
-    "mini-css-extract-plugin": "^2.6.1",
+    "mini-css-extract-plugin": "^2.9.2",
     "mockdate": "^3.0.5",
     "primeicons": "^7.0.0",
     "primereact": "^10.0.2",
     "promise-polyfill": "^8.2.3",
     "prop-types": "^15.8.1",
     "quill": "^2.0.2",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-grid-system": "^8.1.9",
     "react-i18next": "^15.0.1",
     "react-joyride": "^3.0.0-7",
@@ -77,7 +78,7 @@
     "typescript": "^5.0.2",
     "url": "^0.11.0",
     "webpack": "5",
-    "webpack-assets-manifest": "^6.0.0",
+    "webpack-assets-manifest": "^5.0.0",
     "webpack-cli": "^6.0.1",
     "webpack-merge": "^6.0.1",
     "webpack-sources": "^3.2.3",
@@ -93,7 +94,7 @@
     "defaults"
   ],
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.16",
     "react-refresh": "^0.17.0",
     "webpack-dev-server": "^5.0.1"
   }
