--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "typescript": "^5.0.2",
     "url": "^0.11.0",
     "webpack": "5",
-    "webpack-assets-manifest": "^5.0.0",
+    "webpack-assets-manifest": "5",
     "webpack-cli": "^6.0.1",
     "webpack-merge": "^6.0.1",
     "webpack-sources": "^3.2.3",
