--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "d3-scale-chromatic": "^3.0.0",
     "email-validator": "^2.0.4",
     "html-react-parser": "^5.0.5",
-    "i18next": "^24.0.2",
+    "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-fetch-backend": "^6.0.0",
     "i18next-intervalplural-postprocessor": "^3.0.0",
@@ -63,9 +63,9 @@
     "react-grid-system": "^8.1.9",
     "react-i18next": "^15.0.1",
     "react-joyride": "^3.0.0-7",
-    "react-on-rails": "14.2.0",
+    "react-on-rails": "^14.2.1",
     "react-redux": "^9.0.1",
-    "react-router": "^7.1.4",
+    "react-router": "^7.5.1",
     "react-spring": "^9.4.4",
     "react-virtualized": "^9.22.3",
     "react_ujs": "^3.0.0",
