--- a/containers/agnostic/dev_server/Dockerfile
+++ b/containers/agnostic/dev_server/Dockerfile
@@ -29,8 +29,9 @@ WORKDIR /home/colab
 USER colab
 RUN curl -fsSL https://mise.jdx.dev/install.sh | sh
 ENV PATH="/home/colab/.local/bin:$PATH"
-RUN echo "export PATH=/home/colab/.local/bin:$PATH" >> ~/.zshrc && \
-  echo 'eval "$(~/.local/bin/mise activate zsh)"' >> /home/colab/.zshrc
+RUN mkdir -p /home/colab/.local/share/mise && \
+  echo 'eval "$(~/.local/bin/mise activate zsh)"' >> /home/colab/.zshrc && \
+  echo "export PATH=/home/colab/.local/bin:$PATH" >> ~/.zshrc
 
 
 SHELL ["/bin/bash", "-l", "-c"]
