--- a/containers/dev_env/docker-compose.yml
+++ b/containers/dev_env/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ../../:/home/colab/src/app:cached
       - "${HOME}/.ssh:/root/.ssh-localhost:ro"
+      - devmise:/home/colab/.local/share/mise
     command: bash -c "sleep infinity"
   db:
     image: colab_db
@@ -90,4 +91,5 @@ volumes:
   devdata:
   moodledata:
   moodlehtml:
+  devmise:
 
