--- a/containers/agnostic/tester_server/Dockerfile
+++ b/containers/agnostic/tester_server/Dockerfile
@@ -31,10 +31,9 @@ USER colab
 RUN curl -fsSL https://mise.jdx.dev/install.sh | sh
 ENV PATH="/home/colab/.local/bin:$PATH"
 RUN mkdir -p /home/colab/.local/share/mise && \
+  echo "export PATH=/home/colab/.local/bin:$PATH" >> /home/colab/bashrc && \
   echo 'eval "$(~/.local/bin/mise activate bash)"' >> /home/colab/.bashrc && \
-  echo "export PATH=/home/colab/.local/bin:$PATH" >> ~/.bashrc && \
-  chmod u+x ~/.bashrc && \
-  echo "bundler \n foreman \n" >> ~/.default-gems && \
+  echo "bundler \n foreman \n" >> /home/colab/default-gems && \
   mise install ruby yarn nodejs
 
 SHELL ["/bin/bash", "-l", "-c"]
