trying to switch to mise shims

--- a/containers/agnostic/tester_server/Dockerfile
+++ b/containers/agnostic/tester_server/Dockerfile
@@ -33,11 +33,10 @@ ENV PATH="/home/colab/.local/bin:$PATH"
 RUN mkdir -p /home/colab/.local/share/mise && \
   echo "export PATH=/home/colab/.local/bin:$PATH" >> /home/colab/.bashrc && \
   echo 'eval "$(~/.local/bin/mise activate bash)"' >> /home/colab/.bashrc && \
-  echo "export PATH=/home/colab/.local/bin:$PATH" >> /home/colab/subinteractive && \
-  echo 'eval "$(~/.local/bin/mise activate bash)"' >> /home/colab/subinteractive && \
-  chmod u+x /home/colab/subinteractive && \
+  mise activate --shims && \
   echo "bundler \n foreman \n" >> /home/colab/default-gems && \
   mise install ruby yarn nodejs
+ENV PATH="/home/colab/.local/share/mise/shims:$PATH"
 
 SHELL ["/bin/bash", "-l", "-c"]
 
