--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react-dom": "^19.1.0",
     "react-grid-system": "^8.1.9",
     "react-i18next": "^15.0.1",
-    "react-joyride": "^3.0.0-7",
+    "react-joyride": "^2.9.3",
     "react-on-rails": "^14.2.1",
     "react-redux": "^9.0.1",
     "react-router": "^7.5.1",
@@ -94,7 +94,7 @@
     "defaults"
   ],
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.16",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.0",
     "react-refresh": "^0.17.0",
     "webpack-dev-server": "^5.0.1"
   }
